Update Sevice to work with crash rating
